<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading_text">My Nanodegree Apps!</string>
    <string name="project1_text">Spotify Streamer</string>
    <string name="project2_text">Scores App</string>
    <string name="project3_text">Library App</string>
    <string name="project4_text">Build It Bigger</string>
    <string name="project5_text">XYZ Reader</string>
    <string name="project6_text">Capstone: My Own App</string>
</resources>
