<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.river.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headingText"
        android:text="@string/heading_text"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project1"
        android:layout_gravity="center_horizontal"
        android:text="@string/project1_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project2"
        android:layout_gravity="center_horizontal"
        android:text="@string/project2_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project3"
        android:layout_gravity="center_horizontal"
        android:text="@string/project3_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project4"
        android:layout_gravity="center_horizontal"
        android:text="@string/project4_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project5"
        android:layout_gravity="center_horizontal"
        android:text="@string/project5_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/project6"
        android:layout_gravity="center_horizontal"
        android:text="@string/project6_text"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:background="#F08C35"
        android:textColor="#FFFFFF"
        android:onClick="displayToast"/>


</LinearLayout>
